# cmake-gcl

./: .gitignore
OMP-AVX2/: CMakeLists.txt
OpenFlipper/: CMakeLists.txt
OpenGL/: CMakeLists.txt
QT5/: Cmakelists.txt  Note.txt
RXMesh/: CMakeLists.txt
cmake/: FindOpenMesh.cmake
